<resources>
    <string name="app_name">WhipperSnapper</string>

    <string-array name="taskTypes">
        <item>Outdoor, Gardening</item>
        <item>Computer, Tech Help</item>
        <item>Car Ride to a Place</item>
        <item>Pickup from Pharmacy/Some Place</item>
        <item>Card Game, Social Call</item>
        <item>Housekeeping</item>
        <item>Fixing, Maintenance</item>
        <item>Paperwork, Phone Call to a Company</item>
        <item>Petcare</item>
        <item>Other</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_profile_creation">ProfileCreationActivity</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="title_activity_find_task">FindTaskActivity</string>
    <string name="title_activity_user_type_picker">UserTypePickerActivity</string>
    <string name="WhipperSnapper">WhipperSnapper</string>
    <string name="I_am_a_senior">I\'m a senior.</string>
    <string name="I_am_a_volunteer">I\'m a volunteer.</string>
    <string name="title_activity_fill_out_profile">FillOutProfileActivity</string>
    <string name="Tell_us_your_information">Tell us your information:</string>
    <string name="Full_name">Full name</string>
    <string name="For_privacy_your_name_will_appear_as">For privacy, your name will appear as:\s</string>
    <string name="Street_address">Street address</string>
    <string name="City_State_Zip">City, State, ZIP</string>
    <string name="Your_address_will_only_be_shown">Your address will only be shown to WhipperSnapper volunteers you accept.</string>
    <string name="Take_photo_now">Take photo now</string>
    <string name="Upload_a_photo">Upload a photo</string>
    <string name="All_done">All done! Create my profile.</string>
    <string name="Your_name_still_needs_to_be_entered">(Your name still needs to be entered.)</string>
    <string name="Your_address_still_needs_to_be_entered">(Your address still needs to be entered.)</string>
    <string name="Your_photo_is_still_needed">(Your photo is still needed.)</string>
    <string name="Creating_profile">(Creating your profile...)</string>
    <string name="title_activity_senior_home">SeniorHomeActivity</string>
    <string name="This_is_the_home_screen">This is the home screen. You have no requests currently. You can request a task now, or close this app until you need a task done.</string>
    <string name="Create_a_task_request">Create a Task Request</string>
    <string name="The_task_I_need_done_is">The type of task I need done is:</string>
    <string name="Additional_details">Additional details about the task:</string>
    <string name="Optional_take_photos">(Optional) Click to take a photo that can help WhipperSnapper volunteers understand the task:</string>
    <string name="Task_details_hint">Tell the WhipperSnapper volunteer if they need to bring something, when this task needs to be done, if the time flexible, and so on...</string>
    <string name="Unable_to_get_data_from_the_database">Unable to get data from the database.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="I_need_the_task_done_at">I need the task done at:</string>
    <string name="My_home_address">My home address:\s</string>
    <string name="The_location_on_this_map">This location (long press on map to set):</string>
    <string name="All_done_Create_my_task_request">All done. Create my task request.</string>
    <string name="title_activity_waiting_for_chat">WaitingForChatActivity</string>
    <string name="All_set">All set!</string>
    <string name="Waiting_message">Your task request has been posted. You can close this app for now. You will receive a notification when a WhipperSnapper volunteer offers to do your task.\n\nIf you no longer need this task done, you can click the Cancel button below.</string>
    <string name="Cancel_this_task_request">Cancel this task request</string>
    <string name="Your_task_request_has_been_canceled">Your task request has been canceled.</string>
    <string name="To_view_details">(To view details, click on a task in the map.)</string>
    <string name="title_activity_show_task_details">ShowTaskDetailsActivity</string>
    <string name="Offer_to_do_this_task">Offer to do this task.</string>
    <string name="Posted_on">Posted on:\s</string>
    <string name="Your_task_request">Your task request:</string>
    <string name="Send">Send</string>
    <string name="Say_something">Say something...</string>
    <string name="You_are_chatting_with">You are chatting with:</string>
    <string name="Theres_no_internet_connection_right_now">There\'s no internet connection right now.\nPlease try again after connecting to the internet.</string>
    <string name="The_other_person_has_left_the_chat_room">The other person has left the chat room.</string>
    <string name="The_help_offer_for_this_task_has_been_accepted">The help offer for this task has been accepted. You can now close this chat room.</string>
    <string name="has_offered_to_do_this_task_for_you">\shas offered to do this task for you. Click to open chat."</string>
    <string name="You_have_declined">You have declined. You can now close this chat room.</string>
    <string name="The_address_for_this_task_is">The address for this task is\s</string>
    <string name="Call">Call</string>
    <string name="title_activity___debug_fake_phone">_DebugFakePhoneActivity</string>
    <string name="Help_is_on_the_way">Help is on the way.</string>

</resources>
