<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.al.whippersnapper.activities.CreateTaskActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/The_task_I_need_done_is"
            android:id="@+id/tvTaskTypeLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spTaskType"
            android:entries="@array/taskTypes"
            android:layout_below="@+id/tvTaskTypeLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Additional_details"
            android:id="@+id/tvDetailsLabel"
            android:layout_below="@+id/spTaskType"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etTaskDetails"
            android:layout_below="@+id/tvDetailsLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/spTaskType"
            android:layout_alignEnd="@+id/spTaskType"
            android:hint="@string/Task_details_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Optional_take_photos"
            android:id="@+id/tvTakeTaskPhotoLabel"
            android:layout_below="@+id/etTaskDetails"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="@dimen/task_photo_size"
            android:layout_height="@dimen/task_photo_size"
            android:id="@+id/ivTaskPhoto"
            android:layout_below="@+id/tvTakeTaskPhotoLabel"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/I_need_the_task_done_at"
            android:id="@+id/tvTaskDoneAtLabel"
            android:layout_below="@+id/ivTaskPhoto" />

    </RelativeLayout>
    </ScrollView>

</RelativeLayout>
