<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.al.whippersnapper.fragments.CreateTaskLocationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/I_need_the_task_done_at"
            android:id="@+id/tvTaskDoneAtLabel" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/My_home_address"
            android:id="@+id/rbMyHomeAddress"
            android:layout_below="@+id/tvTaskDoneAtLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/The_location_on_this_map"
            android:id="@+id/rbMapLocation"
            android:layout_below="@+id/rbMyHomeAddress"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />


        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#FF00FF"
            android:layout_below="@+id/rbMapLocation"
            />

    </RelativeLayout>
</FrameLayout>
