<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.al.whippersnapper.fragments.CreateTaskDetailsFragment"
    android:background="@color/primary_color">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/The_task_I_need_done_is"
        android:id="@+id/tvTaskTypeLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/light_primary_color" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spTaskType"
        android:entries="@array/taskTypes"
        android:layout_below="@+id/tvTaskTypeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Additional_details"
        android:id="@+id/tvDetailsLabel"
        android:layout_below="@+id/spTaskType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/light_primary_color" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etTaskDetails"
        android:layout_below="@+id/tvDetailsLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spTaskType"
        android:layout_alignEnd="@+id/spTaskType"
        android:hint="@string/Task_details_hint"
        android:background="@color/primary_color"
        android:textColorHint="@color/light_primary_color"
        android:layout_marginBottom="16dp"
        android:textColor="@color/text_on_primary_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Optional_take_photos"
        android:id="@+id/tvTakeTaskPhotoLabel"
        android:layout_below="@+id/etTaskDetails"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/light_primary_color" />

    <ImageView
        android:layout_width="@dimen/task_photo_size"
        android:layout_height="@dimen/task_photo_size"
        android:id="@+id/ivTaskPhoto"
        android:layout_below="@+id/tvTakeTaskPhotoLabel"
        android:layout_centerHorizontal="true"
        android:src="@raw/add_task_photo_white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/All_done_Create_my_task_request"
        android:id="@+id/btnDone_FromDetails"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/accent_color"
        android:textColor="@color/text_on_primary_color" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbInDetailsFrag"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />


</RelativeLayout>
